Issues page mobile design (#21)
* implement mobile design
* fix the sidebar and the header being overlaped with other elements that have relative positioning

--- a/features/issues/components/issue-list/issue-list.module.scss
+++ b/features/issues/components/issue-list/issue-list.module.scss
@@ -1,25 +1,36 @@
 @use "@styles/color";
 @use "@styles/space";
 @use "@styles/font";
+@use "@styles/breakpoint";
 
 .container {
-  background: white;
-  border: 1px solid color.$gray-200;
-  box-sizing: border-box;
-  box-shadow:
-    0 4px 8px -2px rgb(16 24 40 / 10%),
-    0 2px 4px -2px rgb(16 24 40 / 6%);
-  border-radius: space.$s2;
-  overflow: hidden;
+  @media (min-width: breakpoint.$desktop) {
+    background: white;
+    border: 1px solid color.$gray-200;
+    box-sizing: border-box;
+    box-shadow:
+      0 4px 8px -2px rgb(16 24 40 / 10%),
+      0 2px 4px -2px rgb(16 24 40 / 6%);
+    border-radius: space.$s2;
+    overflow: hidden;
+  }
 }
 
 .table {
   width: 100%;
   border-collapse: collapse;
+
+  @media (max-width: breakpoint.$desktop) {
+    table-layout: fixed;
+  }
 }
 
 .headerRow {
   border-bottom: 1px solid color.$gray-200;
+
+  @media (max-width: breakpoint.$desktop) {
+    display: none;
+  }
 }
 
 .headerCell {
@@ -35,6 +46,18 @@
   justify-content: space-between;
   padding: space.$s4 space.$s6;
   border-top: 1px solid color.$gray-200;
+
+  @media (max-width: breakpoint.$desktop) {
+    border: 0;
+    flex-direction: column;
+    padding: 0;
+
+    div:nth-child(1) {
+      display: flex;
+      width: 100%;
+      margin-bottom: 16px;
+    }
+  }
 }
 
 .paginationButton {
@@ -44,6 +67,10 @@
   border: 1px solid color.$gray-300;
   box-shadow: 0 1px 2px rgb(16 24 40 / 5%);
   border-radius: 6px;
+
+  @media (max-width: breakpoint.$desktop) {
+    flex: auto;
+  }
 }
 
 .paginationButton:not(:first-of-type) {
